--- a/index.html
+++ b/index.html
@@ -1,36 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Install-discourse : " />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Install-discourse by baus</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Install-discourse</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">Install-discourse</h1>
+        <p class="header"></p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/baus/install-discourse">View on GitHub</a>
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/baus/install-discourse/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/baus/install-discourse/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/baus/install-discourse">View On GitHub</a></li>
+        </ul>
 
-          <h1 id="project_title">Install-discourse</h1>
-          <h2 id="project_tagline"></h2>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/baus">baus</a></p>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/baus/install-discourse/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/baus/install-discourse/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h1>Installing Discourse on Ubuntu and DigitalOcean</h1>
 
 <p>Copyright 2013 by Christopher Baus <a href="mailto:christopher@baus.net">christopher@baus.net</a>. Licensed under GPL 2.0</p>
@@ -353,17 +352,11 @@ $ sudo -u www-data mkdir /var/www/discourse/tmp/sockets
 <li>Add redis 2.6</li>
 </ul>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Install-discourse maintained by <a href="https://github.com/baus">baus</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-
-    
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
